Fix plugs in item tooltip overflowing off of the tooltip

--- a/style/component/inventory/ItemTooltip.scss
+++ b/style/component/inventory/ItemTooltip.scss
@@ -342,6 +342,8 @@
 
 			&-definition {
 				display: flex;
+				flex-wrap: wrap;
+				row-gap: var(--mod-padding);
 			}
 
 			&-enhanced {
